[#155003574] Fixing spacing between CTA buttons. Fixing bsClass issue.

--- a/frontend-gifts/src/styles/sass/_shop.scss
+++ b/frontend-gifts/src/styles/sass/_shop.scss
@@ -88,9 +88,6 @@
         color: $shop-item-wishlist-hover-color;
       }
     }
-    .add-to-cart {
-      margin: 0;
-    }
   }
   &:hover {
     .shop-thumbnail > img { opacity: .5; }
